fix: count correction in shared view and apply filter and sort in csv export
re #144
